argocd/applications/prod-blue/liveclasses/jibri-deployment.yaml
---
# Jibri Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jibri
  namespace: liveclasses
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jibri
  template:
    metadata:
      labels:
        app: jibri
    spec:
      containers:
        - name: jibri
          image: jitsi/jibri:jibri-8.0-183-g7b406bf-1
          securityContext:
            capabilities:
              add:
                - SYS_ADMIN
          resources:
            requests:
              cpu: "1500m"
              memory: "3Gi"
            limits:
              cpu: "2000m"
              memory: "4Gi"
          volumeMounts:
            - mountPath: /config
              name: jibri-config
            - mountPath: /dev/shm
              name: dshm
      volumes:
        - name: jibri-config
          emptyDir: {}
        - name: dshm
          emptyDir:
            medium: Memory
            sizeLimit: "2Gi"

---
apiVersion: v1
kind: Service
metadata:
  name: jibri
  namespace: liveclasses
spec:
  selector:
    app: jibri
  ports:
    - protocol: TCP
      port: 2222
      targetPort: 2222
  type: ClusterIP
